--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,9 +23,10 @@
     "@ngxs/devtools-plugin": "^19.0.0",
     "@ngxs/logger-plugin": "^19.0.0",
     "@ngxs/store": "^19.0.0",
+    "@swimlane/ngx-charts": "^22.0.0-alpha.0",
     "postcss": "^8.5.2",
-    "tailwindcss": "^3.4.17",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^3.4.17",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
